added teacher validation. changes to swagger file and PersonApi
