# swagger.yaml
@@ -202,6 +202,50 @@ paths:
           description: Updates the person.
         500:
           description: Error deleting the profile "ID".
+    
+  /api/v1/profiles/status/{id}:
+    get:
+      tags: ["Profile"]
+      description: |
+        Gets 'Person' status
+      parameters: 
+        - name: id
+          in: path
+          description: The profile id to requesting status
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: request for status sent.
+          schema:
+            $ref: '#/definitions/Person'
+        500:
+          description: error requesting for person status.
+     
+  /api/v1/profiles/changestatus:
+    post:
+      tags: ["Profile"]
+      description: |
+        setting new password for users email
+      parameters:
+        - name: keyword
+          in: formData
+          description: the keyword for teacher request
+          required: true
+          type: string
+        - name: email
+          in: formData
+          description: the email of the person requesting a status change
+          required: true
+          type: string
+      responses:
+        200:
+          description: request has been sent.
+          schema:
+            $ref: '#/definitions/Person'
+        500:
+          description: error sending request
 
   /api/v1/news:
     get:
@@ -846,6 +890,7 @@ definitions:
       # faculty only fields
       faculty_department:
         type: string
+
   Job:
     type: object
     properties:
